--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "prettier": "2.2.1"
   },
   "type": "module",
   "testEnvironment": "node",
@@ -41,9 +42,17 @@
     "test:analytic": "jest --coverage",
     "lint": "eslint src/**/**.js"
   },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --ext .js,.jsx",
+      "prettier --write",
+      "npm test",
+      "git add"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test"
+      "pre-commit": "lint-staged"
     }
   }
 }
