--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,16 @@
     },
     "rules": {
         "no-shadow": "off",
-        "import/prefer-default-export": "off",
-        "import/no-unresolved": "off"
+        "import/prefer-default-export": "off"
+    },
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "paths": ["src", "API", "config"]
+            }
+        },
+        "react": {
+            "version": "latest" // instead of 'detect'
+        }
     }
 }
