--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
-    "prettier": "2.2.1"
+    "lint-staged": "^10.5.3"
   },
   "type": "module",
   "testEnvironment": "node",
@@ -45,8 +44,8 @@
     "lint": "eslint src/**/**.js"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,md}": [
-      "prettier --write",
+    "src/**/*.{js,json,md}": [
+      "npm run lint",
       "npm test"
     ]
   },
